# song-service

./: .flake8  Dockerfile  README.md  config.py  docker-compose-dev.yml  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  song_list_api.py
app/api/: difficulty_api.py  song_list_api.py
app/services/: song_service.py
scripts/: rundev.sh  runlocal.sh  test.sh
tests/: conftest.py  test_add_song.py  test_get_average_difficulty.py  test_get_songs.py  utils.py
