[tool.poetry]
name = "music-assignment"
version = "0.1.0"
description = ""
authors = ["Andrey Arakelyants"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
umongo = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
deepdiff = "^5.7.0"
Faker = "^13.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings=[
    "ignore:::marshmallow.fields"
]
